--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query-devtools": "^4.32.0",
     "@uidotdev/react-query-api": "^0.1.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
